Iterate the introspections in a stable order again
#13004 made DefaultBeanIntrospector.resolveIntrospections publish Map.copyOf of
the resolved references. The iteration order of a JDK immutable map is
randomized per JVM, and findIntrospections and findIntrospectedTypes stream the
values of that map, so the order they return changed from one run to the next.
The HashMap before it iterated the same way on every run.

A consumer creating something per introspection in that order sees it: the
micronaut-data H2 schema generator creates tables in findIntrospections order,
two test entities map to the same table, and JdbcRepositorySpec failed
intermittently with Column "TIER" not found.

The references are collected into a HashMap again and published as an
unmodifiable view of it, still built in full before the volatile field is
assigned under the double checked lock. The HashMap order rather than the order
of the provider is kept on purpose: in provider order the same data spec fails
on every run, so consumers depend on the order they had before #13004.
findIntrospectedTypes collects into a LinkedHashSet, so it follows that order
rather than the identity hashes of the classes.

The other values #13004 copied do not need this: the two List.copyOf keep the
order, and the MediaType extension map is only looked up.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>